which can be used independently.
----------------------------------------------------------------------
Tue May 22 16:29:11 2007                        Michael Jennings (mej)

Using jbj's rpmeval.c as a starting point, I whipped up rpmcmp.c, a
quickie wrapper around rpmvercmp() based on my similar work done for
CLU.  Not as good as jbj could do, but it's a start.  Needs some
command line options and possibly a conversion to rpmds.  Works for
now though.
----------------------------------------------------------------------
Tue May 22 17:45:40 2007                        Michael Jennings (mej)

Switch from "clu cmp" to "rpmcmp" for version comparison pipe.

Begin work on repo merge.
----------------------------------------------------------------------
Thu May 24 12:33:47 2007                        Michael Jennings (mej)

Refactored repo comparison to generate data structures instead of
printing results so that merge can reuse the comparison routines.

Decode HTML %xx encodings in filenames when using HTTP-based
repositories.
----------------------------------------------------------------------
Thu May 24 16:38:23 2007                        Michael Jennings (mej)

Refactor repository functions into a module so they can be reused by
other tools.

Stripped out merging stuff; it's too hard to do generically because
there's no single concept of what "merge" means.  As long as we can
get a comparison, we can use it in other tools however we wish.
----------------------------------------------------------------------
Tue Jun  5 12:15:32 2007                        Michael Jennings (mej)

Attempting to fix a bug in Subversion support found by Jim Perrin.
Let's see if this works.
----------------------------------------------------------------------
Tue Jun  5 16:49:13 2007                        Michael Jennings (mej)

Hopefully this will fix mzimport for Subversion.
----------------------------------------------------------------------